# Unity_Hololens2

./: .gitignore  README.md
20220429RosSharp/Assets/: WSATestCertificate.pfx
20220429RosSharp/Assets/ARM64/: HoloLensForCV.exp  HoloLensForCV.lib  HoloLensForCV.winmd
20220429RosSharp/Assets/MixedRealityToolkit.Generated/: ProjectPreferences.asset
20220429RosSharp/Assets/MixedRealityToolkit.Generated/CustomProfiles/: New MixedRealityInputSystemProfile.asset  New MixedRealitySpeechCommandsProfile.asset  New MixedRealityToolkitConfigurationProfile 2.asset
20220429RosSharp/Assets/Plugins/WSA/ARM64/: HL2UnityPlugin.winmd
20220429RosSharp/Assets/Prefabs/: Sphere.prefab
20220429RosSharp/Assets/RosSharpMessages/ApriltagRos/msg/: AprilTagDetection.cs  AprilTagDetectionArray.cs
20220429RosSharp/Assets/RosSharpMessages/Pr2Controllers/msg/: JointControllerState.cs  JointTrajectoryControllerState.cs  Pr2GripperCommand.cs
20220429RosSharp/Assets/RosSharpMessages/Pr2GripperSensor/msg/: PR2GripperEventDetectorCommand.cs  PR2GripperEventDetectorData.cs  PR2GripperFindContactCommand.cs  PR2GripperFindContactData.cs  PR2GripperForceServoCommand.cs  PR2GripperForceServoData.cs  PR2GripperGrabCommand.cs  PR2GripperGrabData.cs  PR2GripperPressureData.cs  (+4 more)
20220429RosSharp/Assets/XR/: XRGeneralSettings.asset
20220429RosSharp/Assets/XR/Settings/: OpenXR Package Settings.asset  Windows MR Package Settings.asset
20220429RosSharp/Assets/scripts/: ArmTeleop.cs  EnableTeleoperationPublisher.cs  EnableTeleoperationSubscriber.cs  Float32Publisher.cs  GripperTeleop.cs  HandPositionPublisher.cs  HandPublisher.cs  HandTracking.cs  PR2GripperFindContactDataSubscriber.cs  PR2GripperTeleop.cs  PR2LeftArmTeleop.cs  PR2RightArmTeleop.cs  PoseArrayPublisher.cs  PosePublisher.cs  Pr2GripperCommandPublisher.cs  Pr2ShadowHandTeleop.cs  RightHandPublisherWRTFrame.cs  RightHandTeleop.cs  SHParallelGraspTeleop.cs  SpeechIndexDetect.cs  TactileBall.cs  TestshuangSubscriber.cs  TransformStampedPublisher.cs
20220429RosSharp/Assets/scripts/test/: ApriltagArraySubscriber.cs  ApriltagSubscriber.cs  HandTracking.cs  speechtest.cs
20220429RosSharp/Assets/urdf_pr2/: calibrated_revised.urdf
20220429RosSharp/Assets/urdf_pr2/Materials/: BiotacGreen.mat  Caster.mat  Metallic.mat  Wheel_l.mat  Wheel_r.mat  light_grey.mat
20220429RosSharp/Assets/urdf_pr2/pr2_description/: CMakeLists.txt
20220429RosSharp/Assets/urdf_pr2/sr_description/: CMakeLists.txt
20220429RosSharp/Assets/urdf_pr2/tams_pr2_description/: CMakeLists.txt
20220429RosSharp/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Yannick_codes/: ArUcoMarkerDetection.cs  ArmTeleop.cs  CvUtils.cs  EnableTeleoperationSubscriber.cs  HandPublisher.cs  JogFrameAbsPublisher.cs  PR2LeftArmTeleop.cs  PR2RightArmTeleop.cs
unity_pr2_beginner/: CMakeLists.txt  package.xml
unity_pr2_beginner/config/: pos_parameters.yaml  pr2_left_arm_jog.yaml  pr2_right_arm_jog.yaml  pr2_shadow_hand.yaml
unity_pr2_beginner/launch/: pr2_armd_control.launch  pr2_arms_control.launch  pr2_left_gripper_control.launch  pr2_right_arm_control.launch  ros_sharp_unity.launch  server_endpoint.launch  shadow_hand_control.launch
unity_pr2_beginner/scripts/: enable_teleop.py  visualize_hand.py
unity_pr2_beginner/src/: pr2_arms_control.cpp  pr2_left_arm_control.cpp  pr2_left_gripper_control.cpp  pr2_right_arm_control.cpp  pr2_shadow_hand_contol.cpp  sr_parallel_grasp_controller.cpp
(+675 files in other folders)
