<?xml version="1.0"?>
<package>
  <name>unity_pr2_beginner</name>
  <version>1.0.0</version>
  <description>The unity_pr2_beginner package</description>

  <maintainer email="shuang.li@uni-hamburg.de">Shuang Li</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>bio_ik</build_depend>
  <build_depend>rosbag</build_depend>

  <run_depend>rosbag</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>bio_ik</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_core</run_depend>

</package>
